--- a/distrib/CMakeLists.txt
+++ b/distrib/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 3.0)  # CMake version check
-project(bsdbase)                     # Create project
+project(distrib)                     # Create project
 set(C_STANDARD 1)                    # Set C11 standard
 
 # Be sure to include the needed subriectories
